# gpx-player

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  animate_tracks.js  boat_legend_template.html  clean_gpx.py  download_maps.py  gpx_utils.py  header_template.html  main.py  openseamap.py  pyproject.toml  read_gpx.py  requirements.txt  simple.py  speed_legend_template.html  utils.py  wind_layer.js
.claude/skills/: review-pr-comments.md
.github/workflows/: codecov.yml  publish.yml
example-data/: duplicate-timestamps.gpx  marks.txt  osm-demo-Alex.gpx  osm-demo-Richard.gpx  osm-demo-Yury.gpx  osm_track1.gpx  track1.gpx  track2.gpx  track3.gpx  wrong-timestamp-order.gpx
gpx_player/: clean_gpx.py  gpx_utils.py  main.py  openseamap.py  utils.py  validator.py
gpx_player/assets/: __init__.py  animate_tracks.js  boat_legend_template.html  header_template.html  speed_legend_template.html
tests/: test_cleanup.py  test_openseamap.py  test_utils.py  test_validation.py  test_wind_openmeteo.py  test_wind_server.py
wind/: __init__.py  cache.py  server.py  source_openmeteo.py
