[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpx-player"
version = "0.1.0"
description = "Visualise & animate GPX race tracks."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Yury Kirienko"}]
requires-python = ">=3.8"

dependencies = [
  "folium",
  "jinja2",
  "matplotlib",
  "pytz",
  "lxml",
  "numpy",
  "gpxpy",
]

[project.scripts]              # CLI entry-points after `pip install gpx-player`
gpx-player  = "main:main"
gpx-validate = "validator:main"

[tool.setuptools]
py-modules = ["main", "openseamap", "gpx_utils", "utils", "validator"]
include-package-data = true
